kustomize/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messageboard-prod  # Change per env
